--- a/src/components/sections/TeamTailor.astro
+++ b/src/components/sections/TeamTailor.astro
@@ -1,4 +1,15 @@
 ---
 import "../../styles/teamtailor.scss";
 ---
-<script src="https://scripts.teamtailor-cdn.com/widgets/eu-pink/jobs.js" async charset="utf-8"></script><div class="teamtailor-jobs-widget" data-teamtailor-limit="20" data-teamtailor-pagination="true" data-teamtailor-popup="true" data-teamtailor-api-key="jXh3m2hy0JMDbZZACnckWAnJ7N_0R6n0IXc7AS9k"></div>  
+
+<script
+  src="https://scripts.teamtailor-cdn.com/widgets/eu-pink/jobs.js"
+  async
+  charset="utf-8"></script><div
+  class="teamtailor-jobs-widget"
+  data-teamtailor-limit="20"
+  data-teamtailor-pagination="true"
+  data-teamtailor-popup="true"
+  data-teamtailor-api-key="jXh3m2hy0JMDbZZACnckWAnJ7N_0R6n0IXc7AS9k"
+>
+</div>
