--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import BaseHead from "@/components/head/BaseHead.astro";
-import NewNavBar from "@/components/nav/NewNavBar.astro";
+import NavBar from "@/components/nav/NavBar.astro";
 import Footer from "@/components/footer/Footer.astro";
 
 interface Props {
@@ -21,7 +21,7 @@ const { title, description, type = "website", image } = Astro.props;
     type={type}
   />
   <body class="min-h-screen flex flex-col text-white">
-    <NewNavBar />
+    <NavBar />
     <slot />
     <Footer />
     <script>
