--- a/src/layouts/EventLayout.astro
+++ b/src/layouts/EventLayout.astro
@@ -69,6 +69,9 @@ const summary =
 let formattedDate;
 const eventStart = dayjs(event_start);
 const eventEnd = dayjs(event_end);
+if (!(event_start instanceof Date)) {
+  formattedDate = "Coming Soon";
+}
 if (eventStart.dayOfYear() === eventEnd.dayOfYear()) {
   formattedDate = `${dayjs(event_start).format("D MMMM, YYYY")}`;
 } else {
