--- a/src/layouts/EventLayout.astro
+++ b/src/layouts/EventLayout.astro
@@ -85,7 +85,7 @@ const upcomingEvents = (
       (String(import.meta.env.IS_PREVIEW) === "true" ||
         Date.now() > new Date(data.date_published).getTime()) &&
       (new Date(data.event_start).getTime() > Date.now() ||
-        event_start === "Coming Soon"),
+        data.event_start === "Coming Soon"),
   )
 )
   .sort((a, b) => dayjs(b.data.event_start).diff(a.data.event_start))
