fix invalid date

--- a/src/components/article/ArticleContent.astro
+++ b/src/components/article/ArticleContent.astro
@@ -8,7 +8,7 @@ type Props = {
 const { Content, image } = Astro.props;
 ---
 
-<section class="px-[10px]">
+<section class="px-[10px] mt-4">
   <div
     class="container rounded-[24px] linaro-gradient-border bg-dark mb-24 max-w-5xl mx-auto"
   >
