--- a/src/layouts/EventLayout.astro
+++ b/src/layouts/EventLayout.astro
@@ -101,7 +101,7 @@ const upcomingEvents = (
       ]}
     >
       <h1 class="text-5xl font-bold mb-16 max-w-4xl">{title}</h1>
-      <p class="flex gap-4 flex-wrap items-start block">
+      <p class="flex gap-4 flex-wrap items-start block my-4">
         <div
           data-pagefind-meta={`event_start`}
           data-pagefind-sort={`event_start`}
