--- a/src/components/head/Cookies.astro
+++ b/src/components/head/Cookies.astro
@@ -110,7 +110,7 @@ import "../../styles/cookies.scss";
                 description:
                   "These cookies cookies collect information about how you use the website, which pages you visited and which links you clicked on. All of the data is anonymized and cannot be used to identify you.",
                 toggle: {
-                  value: "analytics_cookies",
+                  value: "marketing_cookies",
                   enabled: true,
                   readonly: false,
                 },
