--- a/src/components/forms/InsightModal.astro
+++ b/src/components/forms/InsightModal.astro
@@ -1,7 +1,7 @@
 ---
 import InsightForm from "./InsightForm.astro";
 
-const { button_text } = Astro.props;
+const { button_text, formName } = Astro.props;
 ---
 
 <style lang="scss">
@@ -17,9 +17,8 @@ const { button_text } = Astro.props;
   }
 </style>
 
-<button
-  class="linaro-gradient-button"
-  onclick={`window.insight.showModal()`}>{button_text}</button
+<button class="linaro-gradient-button" onclick={`window.insight.showModal()`}
+  >{button_text}</button
 >
 <div class="relative w-full">
   <dialog
@@ -28,9 +27,7 @@ const { button_text } = Astro.props;
     class="bg-transparent rounded-xl mx-auto fixed top-0 md:top-[10%] right-0 left-0"
   >
     <div class="flex flex-col items-center max-w-max">
-      <InsightForm
-        modal_id="insight"
-      />
+      <InsightForm modal_id="insight" formName={formName} />
     </div>
   </dialog>
 </div>
