--- a/src/components/sections/Membership.astro
+++ b/src/components/sections/Membership.astro
@@ -5,7 +5,7 @@ import MembershipForm from "../forms/MembershipForm.astro";
 
 type Props = z.infer<typeof membershipSchema>;
 
-const { style, form_id, description, MemberManagementPanel, styles } =
+const { style, form_id, description, MemberManagementPanel, styles, formName } =
   Astro.props;
 
 let markdownContent;
@@ -18,5 +18,6 @@ let markdownContent;
     description={description}
     MemberManagementPanel={MemberManagementPanel}
     styles={styles}
+    formName={formName}
   />
 </div>
