update connect page

--- a/src/components/hero/ConnectHero.astro
+++ b/src/components/hero/ConnectHero.astro
@@ -79,7 +79,7 @@ const currentPath = Astro.url.pathname;
           <h1 class="text-3xl m-0" set:html={markdown} />
           <h1 class="text-linaro-yellow text-3xl m-0">{dates}</h1>
         </div>
-        <div class="flex gap-2 lg:gap-8 mx-auto">
+        {/* <div class="flex gap-2 lg:gap-8 mx-auto">
           {[
             { href: "/connect", label: "Connect Home" },
             { href: "/connect/registration", label: "Registration" },
@@ -99,7 +99,7 @@ const currentPath = Astro.url.pathname;
               {label}
             </a>
           ))}
-        </div>
+        </div> */}
       </div>
     </div>
   )
