--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -104,7 +104,7 @@
   }
 
   .purple-gradient-container-no-padding {
-    @apply bg-purple-gradient  pb-[12rem] mb-[-12rem];
+    @apply bg-purple-gradient ;
   }
 }
 
