--- a/src/layouts/EventLayout.astro
+++ b/src/layouts/EventLayout.astro
@@ -142,6 +142,7 @@ const upcomingEvents = (
               button_text={webinarContactButton.button_text}
               description={webinarContactButton.description}
               styles={{ buttonStyles: "my-8 no-underline inline-block" }}
+              webinarDataId={webinarContactButton.webinarDataId}
             />
           ) : (
             button && (
